changes in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Atharva Solutions - A Complete And Agile Software Solutions</title>
+  <title>Atharva IT Solutions - A Complete And Agile Software Solutions</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Atharva Solutions</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Atharva IT Solutions</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -53,7 +53,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Atharva Solutions</h1>
+      <h1>Atharva IT Solutions</h1>
       <h2>We're working hard to improve our website and we'll ready to launch after</h2>
       <div class="countdown" data-count="2023/12/3" data-template="%d days %h:%m:%s"></div>
 
